--- a/renovate.json
+++ b/renovate.json
@@ -25,5 +25,8 @@
       "depNameTemplate": "today",
       "versioningTemplate": "regex:^(?<major>\\d{4})-(?<minor>\\d{2})-(?<patch>\\d{2})$"
     }
-  ]
+  ],
+  "git-submodules": {
+    "enabled": true
+  }
 }
