--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>platform-engineering-org/.github"
+    "github>platform-engineering-org/.github",
+    "github>platform-engineering-org/.github/fedora.json"
   ],
   "customDatasources": {
     "dates": {
