--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>platform-engineering-org/.github",
-    "github>platform-engineering-org/.github/fedora.json"
+    "github>platform-engineering-org/.github//fedora.json"
   ],
   "customDatasources": {
     "dates": {
